# aibox

./: .gitignore  CMakeLists.txt
common/: sample_comm.h  sample_comm_sys.c
data/conf/: conf.txt
data/models/: mnet_inst640yvu_inst.wk
de_encoder/: CMakeLists.txt  ai_sample.cpp  ai_sample_multithread.cpp
de_encoder/include/: ai_comm_ive.h  ai_comm_log.h  ai_comm_rgn.h  ai_comm_sys.h  ai_comm_vdec.h  ai_comm_venc.h  ai_comm_vgs.h  ai_comm_vo.h  ai_comm_vpss.h  ai_common.h  ai_image_mmz.h  ai_save_image.h  ai_sdk.h  ai_sys.h  ai_util.h  ai_vdec.h  ai_venc.h  ai_vpss.h  aibox.h
de_encoder/src/: ai_comm_ive.cpp  ai_comm_log.c  ai_comm_rgn.c  ai_comm_sys.c  ai_comm_vdec.c  ai_comm_venc.c  ai_comm_vgs.c  ai_comm_vo.c  ai_comm_vpss.c  ai_image_mmz.c  ai_save_image.cpp  ai_sdk.c  ai_sys.c  ai_util.c  ai_vdec.c  ai_venc.c  ai_vpss.c  aibox.c
interface/: ai_global.h  ai_npu_sdk.h  ai_vpu_sdk.h  ai_vpu_sdk_par2.h  svp.cpp  svp_interface.cpp
scripts/: build.sh  run.sh
svp/: CMakeLists.txt  CSvp.h
svp/ive/: CMakeLists.txt  sample_comm_ive.c  sample_ive_gmm2.c  sample_ive_gmm2.h  test.sh  test_gmm2.cpp
svp/nnie/detector/: FaceDetector.cpp  FaceDetector.h  GeneralCls.cpp  GeneralCls.h  GeneralSeg.cpp  YoloCls.cpp  YoloCls.h  yolo.cpp
svp/nnie/inc/: .Net.hpp.swp  Net.hpp
svp/nnie/src/: Net.cpp  nnie_core.c  sample_comm_nnie.c
tests/: test_svp.cpp  test_svp_multithread.cpp
